chore: fix sidebar collapsed image

--- a/module/scss/ui-naggaroth.scss
+++ b/module/scss/ui-naggaroth.scss
@@ -199,7 +199,7 @@
 	}
 
 	#sidebar.collapsed .collapse {
-		background: url("../ui/sidebar-button-settings-active.webp");
+		background: url("../ui/sidebar-button-collapse-active.webp");
 	}
 
 	#logo {
